adds queries and routes for stacks
