# api/core/backend/docs/swagger.yaml
@@ -51,6 +51,20 @@ definitions:
         description: validate:"required"`
         type: string
     type: object
+  models.CreateStackRequest:
+    properties:
+      project_name:
+        maxLength: 32
+        minLength: 3
+        type: string
+      stack_name:
+        maxLength: 32
+        minLength: 3
+        type: string
+    required:
+    - project_name
+    - stack_name
+    type: object
   models.Project:
     properties:
       created_at:
@@ -61,6 +75,17 @@ definitions:
         type: string
       updated_at:
         type: string
+    required:
+    - name
+    type: object
+  models.Stack:
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+      project_id:
+        type: integer
     required:
     - name
     type: object
@@ -276,6 +301,29 @@ paths:
       tags:
       - CloudProvs
   /v1/project:
+    delete:
+      consumes:
+      - application/json
+      description: Delete project by given ID.
+      parameters:
+      - description: Project ID
+        in: body
+        name: id
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: ok
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: delete project by given ID
+      tags:
+      - Project
     post:
       consumes:
       - application/json
@@ -337,6 +385,91 @@ paths:
       summary: get all exists projects
       tags:
       - Projects
+  /v1/stack:
+    delete:
+      consumes:
+      - application/json
+      description: Delete stack by given ID.
+      parameters:
+      - description: Stack ID
+        in: body
+        name: id
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: ok
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: delete stack by given ID
+      tags:
+      - Stack
+    post:
+      consumes:
+      - application/json
+      description: Create a new stack.
+      parameters:
+      - description: Name
+        in: body
+        name: name
+        required: true
+        schema:
+          type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.CreateStackRequest'
+      security:
+      - ApiKeyAuth: []
+      summary: create a new stack
+      tags:
+      - Stack
+  /v1/stack/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get stack by given ID.
+      parameters:
+      - description: Stack ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Stack'
+      summary: get stack by given ID
+      tags:
+      - Stack
+  /v1/stacks:
+    get:
+      consumes:
+      - application/json
+      description: Get all exists stacks.
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Stack'
+            type: array
+      summary: get all exists stacks
+      tags:
+      - Stacks
   /v1/token/renew:
     post:
       consumes:
